[package]
name = "rust"
version = "0.1.0"
edition = "2021"
authors = ["The wasm-bindgen Developers"]
rust-version = "1.57"

[lib]
proc-macro = true
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
quote = "1.0.33"
syn = "2.0.38"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-test = "0.3.42"